--- a/package.json
+++ b/package.json
@@ -3,23 +3,20 @@
   "version": "0.0.1",
   "author": "Dison Tangor <disontangor@gmail.com>",
   "description": "Template for Electron, Snowpack, React and Typescript",
+  "main": "./build/main.js",
   "scripts": {
-    "dev": "concurrently \"npm run snowpack-render-dev\" \"npm run snowpack-main-build\" \"npm run electron-start\"",
-    "build": "concurrently \"npm run snowpack-main-build\" \"npm run snowpack-render-build\"",
-    "electron-start": "electron ./build/main.js",
-    "snowpack-main-build": "snowpack build --config ./src/snowpack.main.cfg.mjs",
-    "snowpack-render-dev": "snowpack dev --config ./src/snowpack.render.cfg.mjs",
-    "snowpack-render-build": "snowpack build --config ./src/snowpack.render.cfg.mjs",
+    "dev": "zx ./scripts/dev.mjs",
+    "build": "zx ./scripts/build.mjs",
     "test": "echo \"This template does not include a test runner by default.\" && exit 1"
   },
   "devDependencies": {
     "@types/react": "^17.0.35",
     "@types/react-dom": "^17.0.11",
-    "concurrently": "^6.4.0",
     "electron": "^16.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "snowpack": "^3.3.7",
-    "typescript": "^4.4.4"
+    "typescript": "^4.4.4",
+    "zx": "^4.2.0"
   }
 }
